XWIKI-20825: Edit autosave frequency contrast issue * Removed the use of opacity * Added a new class to the parent element instead. * Updated style using theme for the new class.

--- a/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/xwiki-platform-flamingo-skin-resources/src/main/resources/flamingo/less/edit.less
+++ b/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/xwiki-platform-flamingo-skin-resources/src/main/resources/flamingo/less/edit.less
@@ -7,6 +7,9 @@
   .buttons {
     margin: 0;
     padding: 1em;
+    #autosaveControl.disabled{
+      .text-muted;
+    }
   }
 
   &.sticky-buttons-fixed {
@@ -148,3 +151,5 @@ textarea#content {
 .editableProperty-editor {
   margin-top: @button-spacing;
 }
+
+
